fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,16 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+body::-webkit-scrollbar {
+  background-color: #fff;
+  width: 0px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fff;
+  width: 0px;
+}
+
 hr {
   margin: 1rem 0;
   color: inherit;
